release 1.13
- Fixed issue 1114
  http://java.net/jira/browse/JERSEY-1114
  UriTemplate was not concatenating URI with path correctly.
- Fixed issue 1118
  http://java.net/jira/browse/JERSEY-1118
  The NPE occurs when a java type of consumes is a primitive type, and not found entity provider
- Fixed issue 1042
  http://java.net/jira/browse/JERSEY-1042
  JsonXmlStreamReader is not working correctly with MOXy
- Fixed issue 770
  http://java.net/jira/browse/JERSEY-770
  JsonXmlStreamWriter writeCData "not supported yet"
- Fixed issue 1131
  http://java.net/jira/browse/JERSEY-1131
  Missing null check in WadlGeneratorResourceDocSupport
- Fixed issue 1081
  http://java.net/jira/browse/JERSEY-1081
  UriBuilderImpl did not clone it's state correctly when calling clone() method.
- Fixed issue 1064
  http://java.net/jira/browse/JERSEY-1064
  Checking for null in OAuthSignature.addParam() to avoid NPE's when query parameters don't have values.
- Grizzly 2 version update (to 2.2.4)
- Fixed issue 880
  http://java.net/jira/browse/JERSEY-880
  com.sun.jersey.config.property.WebPageContentRegex parameter fails on a Websphere Application Server.
- Fixed issue 1055
  http://java.net/jira/browse/JERSEY-1055
  Fix vulnerable sample of code in documentation
- Fixed issue 797
  http://java.net/jira/browse/JERSEY-797
  HttpRequestContext.getAcceptableMediaType() Javadoc should specify alternatives
- Fixed issue 780
  http://java.net/jira/browse/JERSEY-780
  Malformed URL returns a 500 instead of a 400
- Fixed issue 843
  http://java.net/jira/browse/JERSEY-843
  Some javadoc links are broken
- Fixed issue 1000
  http://java.net/jira/browse/JERSEY-1000
  Improvement suggestions for https-server-glassfish sample
- Fixed issue 670
  http://java.net/jira/browse/JERSEY-670
  jacksonjsonprovider sample improvement requests
- Fixed issue 1014
  http://java.net/jira/browse/JERSEY-1014
  Null Pointer Exception when resources are not found
- Fixed issue 1003